--- a/templates/quotation.html
+++ b/templates/quotation.html
@@ -159,8 +159,9 @@
         <th>Thickness</th>
         <th>Dimensions</th>
         <th>Barring Type</th>
+        <th>Price</th>
         <th>Qty</th>
-        <th>Discount</th>
+        <th>Disc. %</th>
         <th>Total</th>
       </tr>
     </thead>
@@ -196,8 +197,9 @@
             {% endif %}
           </td>
           <td>{{ item.get('bar_type', '------') if prod_type == 'blanket' else '------' }}</td>
+          <td>₹{{ '%.2f'|format(item.get('unit_price', item.get('base_price', 0))|float) }}</td>
           <td>{{ item.get('quantity', 1) }}</td>
-          <td>{{ item.get('discount_percent', 0) }}%</td>
+          <td>{{ item.get('discount_percent', 0) }}</td>
           <td>₹{{ '%.2f'|format(item.calculations.final_total|default(item.total_price|default(0))) }}</td>
         </tr>
       {% endfor %}
