--- a/templates/products/chemicals/mpack.html
+++ b/templates/products/chemicals/mpack.html
@@ -33,6 +33,16 @@
     </div>
   </div>
 
+  <!-- Underpacking Type Selection -->
+  <div class="mb-3">
+    <label for="underpackingType" class="form-label">Select Underpacking Type:</label>
+    <select id="underpackingType" class="form-select">
+      <option value="">-- Select Underpacking Type --</option>
+      <option value="mtech_mpack">Mtech Mpack</option>
+      <option value="mark3zet">Mark3zet</option>
+    </select>
+  </div>
+
   <div id="mpackSection" style="display:none;">
     <!-- Thickness -->
     <div class="row mb-3">
