--- a/templates/quotation.html
+++ b/templates/quotation.html
@@ -174,7 +174,7 @@
           <td>{{ item.get('machine', '') }}</td>
           <td>{% if prod_type == 'mpack' %}Underpacking{% else %}{{ prod_type }}{% endif %}</td>
           <td>{% if prod_type == 'blanket' %}{{ item.get('blanket_type', item.get('name', '----')) }}
-              {% elif prod_type == 'mpack' %}{{ item.get('underpacking_type', '----')|title|replace('_', ' ') }}
+              {% elif prod_type == 'mpack' %}{{ item.get('underpacking_type', '----').replace('_', ' ').title() }}
               {% else %}----{% endif %}</td>
           <td>{% if item.get('thickness') %}{% if item.type == 'blanket' %}{{ item.thickness|replace('.0', '') }} mm{% else %}{{ item.thickness }}{% if item.thickness and not (item.thickness|string).endswith(('mm', 'micron', 'in', 'cm')) and item.thickness|float >= 1 %} mm{% endif %}{% endif %}{% else %}------{% endif %}</td>
           <td>
