--- a/templates/products/blankets/blankets.html
+++ b/templates/products/blankets/blankets.html
@@ -141,7 +141,7 @@
     </div>
 
     <!-- ✅ ADD TO CART BUTTON -->
-    <button class="btn btn-primary" onclick="addBlanketToCart()">Add to Cart</button>
+    <button id="addToCartBtn" class="btn btn-primary">Add to Cart</button>
     <div id="cart-message" class="mt-2"></div>
 
     <div id="cart-message" class="mt-2"></div>
