Fix MPack cart update functionality by properly handling edit mode and button click events

--- a/templates/products/chemicals/mpack.html
+++ b/templates/products/chemicals/mpack.html
@@ -114,7 +114,7 @@
     </div>
 
     <!-- Add to Cart Button -->
-    <button id="addToCartBtn" class="btn btn-primary" style="display:none;" onclick="addMpackToCart()">Add to Cart</button>
+    <button id="addToCartBtn" class="btn btn-primary" style="display:none;">Add to Cart</button>
     <div id="cart-message" class="mt-2"></div>
   </div>
 
