--- a/templates/cart.html
+++ b/templates/cart.html
@@ -381,8 +381,19 @@
                 <div class="col-12 col-lg-10 mx-auto">
                     <div class="cart-item mb-4" 
                          data-type="{{ item.type }}" 
+                         data-index="{{ loop.index0 }}"
                          data-item-id="{{ item.id or item._id }}"
                          data-name="{{ item.name }}"
+                         data-quantity="{{ item.quantity }}"
+                         {% if item.type == 'blanket' %}
+                         data-base-price="{{ item.base_price }}"
+                         data-bar-price="{{ item.bar_price }}"
+                         data-gst-percent="{{ item.gst_percent or 18 }}"
+                         {% else %}
+                         data-unit-price="{{ item.unit_price }}"
+                         data-gst-percent="{{ item.gst_percent or 12 }}"
+                         {% endif %}
+                         data-discount-percent="{{ item.discount_percent or 0 }}"
                          {% if item.type == 'blanket' %}
                              data-base-price="{{ item.base_price|default(0) }}" 
                              data-bar-price="{{ item.bar_price|default(0) }}" 
@@ -455,6 +466,7 @@
                                             <div class="price-row">
                                                 <span class="price-label">Unit Price:</span>
                                                 <span class="price-value unit-price">₹{{ "%.2f"|format(item.unit_price|default(0)) }}</span>
+                                                <input type="hidden" class="unit-price-value" value="{{ item.unit_price|default(0) }}">
                                             </div>
                                             {% if item.bar_price and item.bar_price > 0 %}
                                             <div class="price-row">
@@ -490,12 +502,13 @@
                                                 <div class="d-flex align-items-center">
                                                     <div class="input-group" style="width: 120px;">
                                                         <input type="number" 
-                                                               class="form-control text-center discount-input" 
+                                                               class="form-control discount-input" 
                                                                value="{{ item.discount_percent|default(0) }}" 
                                                                min="0" 
                                                                max="100"
-                                                               data-index="{{ loop.index0 }}" 
-                                                               style="border-right: 0; padding: 0.25rem;">
+                                                               step="0.1"
+                                                               data-index="{{ loop.index0 }}"
+                                                               data-item-id="{{ item.id or item._id }}">r-right: 0; padding: 0.25rem;">
                                                         <span class="input-group-text">%</span>
                                                     </div>
                                                     <button class="btn btn-sm btn-outline-success update-discount-btn ms-2" 
@@ -530,15 +543,19 @@
                                         <button type="button" 
                                                 class="btn btn-outline-primary btn-sm change-item-btn" 
                                                 data-item-id="{{ item.id or item._id }}" 
-                                                data-item-name="{{ item.name }}"
-                                                data-item-type="{{ item.type }}"
-                                                {% if item.type == 'blanket' %}
+                                                data-index="{{ loop.index0 }}"
+                                                data-type="{{ item.type }}">
+                                            <i class="fas fa-edit me-1"></i> Change Item
+                                        </button>
+                                        {% if item.type == 'blanket' %}
                                                     {% if item.machine %}data-item-machine="{{ item.machine }}"{% endif %}
                                                     {% if item.thickness %}data-item-thickness="{{ item.thickness }}"{% endif %}
                                                     {% if item.length is defined %}data-item-length="{{ item.length }}"{% endif %}
                                                     {% if item.width is defined %}data-item-width="{{ item.width }}"{% endif %}
                                                     {% if item.unit %}data-item-unit="{{ item.unit }}"{% endif %}
-                                                    {% if item.bar_type %}data-item-bar-type="{{ item.bar_type }}"{% endif %}
+{{ ... }}
+                                        <button type="button" 
+                                                class="btn btn-outline-danger btn-sm remove-item-btn">
                                                 {% elif item.type == 'mpack' %}
                                                     {% if item.machine %}data-item-machine="{{ item.machine }}"{% endif %}
                                                     {% if item.thickness %}data-item-thickness="{{ item.thickness.replace(' micron', '') }}"{% endif %}
